hw3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-service
  labels:
    app: app
spec:
  selector:
    app: custom-app
  sessionAffinity: None
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
