hw3/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: "/app/log"
    rewrite:
      uri: /log
    route:
    - destination:
        host: custom-service
        port:
          number: 5000
    fault:
      delay:
        fixedDelay: 2s
        percentage:
          value: 100
    timeout: 1s
    retries:
      attempts: 2
      perTryTimeout: 1s
  - match:
    - uri:
        prefix: "/app"
    rewrite:
      uri: /
    route:
    - destination:
        host: custom-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: "/metrics"
    route:
    - destination:
        host: custom-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /
    directResponse:
      status: 404
      body:
        string: "Not Found"
